--- a/tmux.conf
+++ b/tmux.conf
@@ -81,6 +81,7 @@ set-window-option -g automatic-rename
 
 # color
 set -g default-terminal "screen-256color"
+#set -g default-terminal "xterm-256color"
 
 # https://github.com/edkolev/dots/blob/master/tmux.conf
 # Updates for tmux 1.9's current pane splitting paths.
