--- a/config/sway/config
+++ b/config/sway/config
@@ -37,11 +37,11 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # Example configuration:
 #
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
+#exec swayidle -w \
+#         timeout 300 'swaylock -f -c 000000' \
+#         timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+#         before-sleep 'swaylock -f -c 000000'
+
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
@@ -71,6 +71,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
     # Start a terminal
     bindsym $mod+Return exec $term
+    # Start a neovim/neovide
+    bindsym $mod+n exec neovide
 
     # Kill focused window
     bindsym $mod+Shift+q kill
@@ -216,5 +218,6 @@ bar {
 
 # [yellow]
 xwayland enabled
+workspace_layout stacking
 
 include /etc/sway/config.d/*
