--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-set-option -g status-bg colour235 #base02
-set-option -g status-style fg=colour136 #yellow
+##set-option -g status-bg colour235 #base02
+##set-option -g status-style fg=colour136 #yellow
 #set-option -g status-style attr=default
 
 # set window split
@@ -8,34 +8,34 @@ bind-key v split-window -h
 bind-key b split-window
 
 # default window title colors
-set-window-option -g window-status-style fg=colour244 #base0
-set-window-option -g window-status-style bg=default
+##set-window-option -g window-status-style fg=colour244 #base0
+##set-window-option -g window-status-style bg=default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-style fg=colour166 #orange
-set-window-option -g window-status-current-style bg=default
+##set-window-option -g window-status-current-style fg=colour166 #orange
+##set-window-option -g window-status-current-style bg=default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
 #set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-style fg=colour240 #base01
+##set-option -g pane-active-border-style fg=colour240 #base01
 
 # message text
 #set-option -g message-bg colour235 #base02
-set-option -g message-style fg=colour166 #orange
+##set-option -g message-style fg=colour166 #orange
 
 # pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+##set-option -g display-panes-active-colour colour33 #blue
+##set-option -g display-panes-colour colour166 #orange
 # clock
-set-window-option -g clock-mode-colour green #green
+##set-window-option -g clock-mode-colour green #green
 
 
-set -g status-interval 1
-set -g status-justify centre # center align window list
-set -g status-left-length 20
-set -g status-right-length 140
+##set -g status-interval 1
+##set -g status-justify centre # center align window list
+##set -g status-left-length 20
+##set -g status-right-length 140
 #set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
 #set -g status-right '#[fg=green,bg=default,bright]#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
@@ -44,7 +44,7 @@ set-option -g prefix C-a
 bind-key C-a last-window
 
 # Start numbering at 1
-set -g base-index 1
+set -g base-index 0
 
 # Allows for faster key repetition
 set -s escape-time 0
@@ -88,7 +88,7 @@ set-window-option -g automatic-rename
 #set-option -sa terminal-features ',screen-256color:RGB'
 #set -g default-terminal "screen-256color"
 #set -ag terminal-overrides ",screen-256color:RGB"
-set -sg terminal-overrides ",*:RGB"
+##set -sg terminal-overrides ",*:RGB"
 
 # https://github.com/edkolev/dots/blob/master/tmux.conf
 # Updates for tmux 1.9's current pane splitting paths.
@@ -118,3 +118,17 @@ if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 
 bind-key H pipe-pane -o "exec cat >>$HOME/'#W-tmux.log'"
 
 #source -q ~/.tmux.conf.local
+
+# List of plugins
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
