--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,2 +1,9 @@
+
 [font]
 size = 9.0
+
+[general]
+import = [
+	"~/.config/alacritty/themes/catppuccin_mocha.toml"
+	#"~/.config/alacritty/themes/tomorrow_night_bright.toml"
+]
