--- a/tmux.conf
+++ b/tmux.conf
@@ -88,7 +88,8 @@ set-window-option -g automatic-rename
 #set-option -sa terminal-features ',screen-256color:RGB'
 #set -g default-terminal "screen-256color"
 #set -ag terminal-overrides ",screen-256color:RGB"
-##set -sg terminal-overrides ",*:RGB"
+#set -sg terminal-overrides ",*:RGB"
+#set -sg terminal-features ",*:RGB"
 
 # https://github.com/edkolev/dots/blob/master/tmux.conf
 # Updates for tmux 1.9's current pane splitting paths.
@@ -120,15 +121,24 @@ bind-key H pipe-pane -o "exec cat >>$HOME/'#W-tmux.log'"
 #source -q ~/.tmux.conf.local
 
 # List of plugins
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'omerxx/tmux-floax'
+
+# The default width and height of the floating pane
+set -g @floax-width '60%'
+set -g @floax-height '80%'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-features ',*:RGB'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
